# flatgeom-rs

./: Cargo.toml  README.md
src/: lib.rs
src/geometry/: linestring.rs  mod.rs  multi_linestring.rs  multi_point.rs  multi_polygon.rs  polygon.rs
src/geozero/: mod.rs  reader.rs  writer.rs
tests/: georust_interop.rs  geozero.rs  serde.rs
